--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "test": "live-server --open=./SpecRunner.html --port=8081",
-    "index":  "live-server --open=./index.html --port=8081",
+    "index": "live-server --open=./index.html --port=8081",
     "start": "babel . --watch --out-dir compiled --presets=react --ignore=node_modules,compiled --source-maps inline",
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
   },
@@ -21,6 +21,7 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-plugin-react": "1.0.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "mocha": "2.3.3",
